assets/css/main.css
/* ... */
table.default th {
  font-weight: 400;
  padding: 0.5em 1em 0.5em 1em;
  text-align: left;
}

table.default thead {
  background: #7c8081;
  color: #fff;
}

/* Button */

input[type="button"],
input[type="submit"],
input[type="reset"],
button,
.button {
  -moz-appearance: none;
  -webkit-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -moz-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out,
    background-color 0.2s ease-in-out;
  -webkit-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out,
    background-color 0.2s ease-in-out;
  -ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out,
    background-color 0.2s ease-in-out;
  transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out,
    background-color 0.2s ease-in-out;
  background: none;
  border: solid 1px;
  border-radius: 0;
  color: inherit;
  cursor: pointer;
  display: inline-block;
  font-size: 0.8em;
  font-weight: 900;
  letter-spacing: 2px;
  min-width: 18em;
  padding: 0 0.75em;
  line-height: 3.75em;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
}

input[type="button"]:hover,
input[type="submit"]:hover,
input[type="reset"]:hover,
button:hover,
.button:hover {
  background: rgba(188, 202, 206, 0.15);
  border-color: inherit;
}

input[type="button"].primary,
input[type="submit"].primary,
input[type="reset"].primary,
button.primary,
.button.primary {
  background: #83d3c9;
  border-color: #83d3c9;
  color: #fff !important;
}

input[type="button"].primary:hover,
input[type="submit"].primary:hover,
input[type="reset"].primary:hover,
button.primary:hover,
.button.primary:hover {
  background: #96dad1 !important;
  border-color: #96dad1 !important;
}

input[type="button"].fit,
input[type="submit"].fit,
input[type="reset"].fit,
button.fit,
.button.fit {
  width: 100%;
}

input[type="button"].small,
input[type="submit"].small,
input[type="reset"].small,
button.small,
.button.small {
  font-size: 0.7em;
  min-width: 14em;
  padding: 0.5em 0;
}

/* Wrapper */

.wrapper {
  margin-bottom: 5em;
  padding: 5em;
}

.wrapper.style1 {
  padding: 0;
}

.wrapper.style2 {
  background-color: #83d3c9;
  background-image: url("images/light-bl.svg"), url("images/light-br.svg");
  background-position: bottom left, bottom right;
  background-repeat: no-repeat, no-repeat;
  background-size: 25em, 25em;
  color: #fff;
}

.wrapper.style2 input[type="button"]:hover,
.wrapper.style2 input[type="submit"]:hover,
.wrapper.style2 input[type="reset"]:hover,
.wrapper.style2 button:hover,
.wrapper.style2 .button:hover {
  background: rgba(255, 255, 255, 0.15) !important;
}

.wrapper.style2 input[type="button"].primary,
.wrapper.style2 input[type="submit"].primary,
.wrapper.style2 input[type="reset"].primary,
.wrapper.style2 button.primary,
.wrapper.style2 .button.primary {
  background: #fff;
  border-color: #fff;
  color: #83d3c9 !important;
}

.wrapper.style2 input[type="button"].primary:hover,
.wrapper.style2 input[type="submit"].primary:hover,
.wrapper.style2 input[type="reset"].primary:hover,
.wrapper.style2 button.primary:hover,
.wrapper.style2 .button.primary:hover {
  border-color: inherit !important;
  color: #fff !important;
}

.wrapper.style3 {
  background: #fff;
  color: inherit;
}

.wrapper.style4 {
  background: #fff;
  color: inherit;
  padding: 4em;
}

/* Header */

@-moz-keyframes reveal-header {
  0% {
    top: -5em;
  }

  100% {
    top: 0;
  }
}

@-webkit-keyframes reveal-header {
  0% {
    top: -5em;
  }

  100% {
    top: 0;
  }
}

@-ms-keyframes reveal-header {
  0% {
    top: -5em;
  }

  100% {
    top: 0;
  }
}

@keyframes reveal-header {
  0% {
    top: -5em;
  }

  100% {
    top: 0;
  }
}

#header {
  background: #fff;
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.075);
  color: inherit;
  cursor: default;
  font-size: 0.8em;
  left: 0;
  padding: 1em 1.5em;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 10000;
}

#header h1 {
  font-weight: 900;
  margin: 0;
}

#header h1 span {
  font-weight: 300;
}

#header nav {
  letter-spacing: 0.075em;
  position: absolute;
  right: 1.5em;
  text-transform: uppercase;
  top: 0.75em;
}

#header nav ul {
  list-style: none;
  padding-left: 0;
}

#header nav ul li {
  display: inline-block;
  margin-left: 1.5em;
  padding-left: 0;
}

#header nav ul li > ul {
  display: none;
}

#header nav ul li a {
  border: solid 1px transparent;
  color: inherit;
  display: inline-block;
  line-height: 1em;
  padding: 0.6em 0.75em;
  text-decoration: none;
}

#header nav ul li input[type="button"],
#header nav ul li input[type="submit"],
#header nav ul li input[type="reset"],
#header nav ul li button,
#header nav ul li .button {
  font-size: 1em;
  min-width: 0;
  width: auto;
}

#header nav ul li.submenu > a {
  text-decoration: none;
}

#header nav ul li.submenu > a:before {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: FontAwesome;
  font-style: normal;
  font-weight: normal;
  text-transform: none !important;
}

#header nav ul li.submenu > a:before {
  content: "\f107";
  margin-right: 0.65em;
}

#header nav ul li.active > a,
#header nav ul li:hover > a {
  -moz-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background: rgba(188, 202, 206, 0.15);
}

#header nav ul li.current > a {
  font-weight: 900;
}

#header.reveal {
  -moz-animation: reveal-header 0.5s;
  -webkit-animation: reveal-header 0.5s;
  -ms-animation: reveal-header 0.5s;
  animation: reveal-header 0.5s;
}

#header.alt {
  -moz-animation: none;
  -webkit-animation: none;
  -ms-animation: none;
  animation: none;
  background: transparent;
  box-shadow: none;
  color: #fff;
  padding: 2em 2.5em;
  position: absolute;
}

#header.alt nav {
  right: 2.5em;
  top: 1.75em;
}

#header.alt nav ul li.active > a,
#header.alt nav ul li:hover > a {
  border: solid 1px;
}
/* ... */

